--- a/mcarbonPortal/src/app/account-management/account-management.component.html
+++ b/mcarbonPortal/src/app/account-management/account-management.component.html
@@ -127,7 +127,20 @@
                     Status
                   </th>
                   <td mat-cell *matCellDef="let account">
-                    {{ account.status }}
+                    <ng-container [ngSwitch]="account.status">
+                      <button class="btn btn-success btn-sm" *ngSwitchCase="1">
+                        Active
+                      </button>
+                      <button class="btn btn-danger btn-sm" *ngSwitchCase="0">
+                        Deactive
+                      </button>
+                      <button
+                        class="btn btn-secondary btn-sm"
+                        *ngSwitchCase="3"
+                      >
+                        Suspended
+                      </button>
+                    </ng-container>
                   </td>
                 </ng-container>
 
@@ -151,7 +164,7 @@
                       <button
                         class="btn-action"
                         mat-menu-item
-                        (click)="viewDialog(account)"
+                        (click)="viewAccountDialog(account)"
                       >
                         <mat-icon style="color: #009688"
                           >remove_red_eye</mat-icon
