--- a/mcarbonPortal/src/app/view-access-dialog/view-access-dialog.component.html
+++ b/mcarbonPortal/src/app/view-access-dialog/view-access-dialog.component.html
@@ -10,7 +10,9 @@
   <div class="row">
     <ng-container *ngFor="let access of accessName">
       <div class="col-md-10 offset-md-1 justify-content-center">
-        <h4>{{ access }}</h4>
+        <mat-checkbox  checked disabled>
+          {{ access }}
+        </mat-checkbox>
       </div>
     </ng-container>
   </div>
