--- a/mcarbonPortal/src/app/view-account-dialog/view-account-dialog.component.html
+++ b/mcarbonPortal/src/app/view-account-dialog/view-account-dialog.component.html
@@ -1,1 +1,358 @@
-<p>view-account-dialog works!</p>
+<div class="card card-1">
+  <div class="card-header card-header-danger">
+    <h4 class="card-title">
+      Account Details
+      <button mat-icon-button mat-dialog-close class="close-btn">
+        <mat-icon aria-label="Close dialog">close</mat-icon>
+      </button>
+    </h4>
+  </div>
+
+  <mat-tab-group
+    #tabGroup
+    [formGroup]="userForm"
+    *ngIf="userForm"
+    [dynamicHeight]="false"
+    mat-align-tabs="center"
+  >
+    <mat-tab label="Account">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-5 offset-md-1">
+            <div class="row">
+              <div class="col-12 col-custom">
+                <mat-form-field>
+                  <input
+                    matInput
+                    type="text"
+                    placeholder="Name"
+                    formControlName="name"
+                    readonly
+                  />
+                </mat-form-field>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-12 col-custom">
+                <mat-form-field>
+                  <input
+                    matInput
+                    type="number"
+                    placeholder="Max User"
+                    formControlName="max_user"
+                    readonly
+                  />
+                </mat-form-field>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-12 col-custom">
+                <mat-form-field>
+                  <mat-label>Account Expiry Date</mat-label>
+                  <input
+                    matInput
+                    [matDatepicker]="picker"
+                    formControlName="acc_exp_date"
+                    readonly
+                    disabled
+                  />
+                  <mat-hint>MM/DD/YYYY</mat-hint>
+                  <mat-datepicker-toggle
+                    matIconSuffix
+                    [for]="picker"
+                    disabled
+                  ></mat-datepicker-toggle>
+                  <mat-datepicker #picker></mat-datepicker>
+                </mat-form-field>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-5">
+            <!-- <mat-form-field>
+                  <mat-label>Select a Logo</mat-label>
+                  <input
+                    type="file"
+                    (change)="onPhotoSelected($event)"
+                    accept="image/*"
+                    style="display: none"
+                  />
+                  <button mat-icon-button type="button" (click)="fileInput.click()">
+                    <mat-icon>photo_camera</mat-icon>
+                  </button>
+                  <mat-icon *ngIf="photoControl"
+                    >check_circle_outline</mat-icon
+                  >
+                </mat-form-field>
+                <img
+                  *ngIf="photoUrl"
+                  [src]="photoUrl"
+                  alt="Selected photo"
+                  style="border-radius: 50%; max-width: 200px; height: auto"
+                /> -->
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-10 offset-md-1">
+            <mat-form-field>
+              <input
+                matInput
+                type="text"
+                placeholder="Address"
+                formControlName="address"
+                readonly
+              />
+            </mat-form-field>
+          </div>
+        </div>
+      </div>
+    </mat-tab>
+
+    <mat-tab label="Account Settings">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-5 offset-md-1">
+            <mat-form-field>
+              <input
+                matInput
+                type="number"
+                placeholder="Maximum Active Sessions"
+                formControlName="max_active_sessions"
+                readonly
+              />
+            </mat-form-field>
+          </div>
+          <div class="col-md-5">
+            <mat-form-field>
+              <input
+                matInput
+                type="number"
+                placeholder="Maximum Duration (in Minutes)"
+                formControlName="max_duration"
+                readonly
+              />
+            </mat-form-field>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-5 offset-md-1">
+            <mat-form-field>
+              <input
+                matInput
+                type="number"
+                placeholder="Maximum Participants"
+                formControlName="max_participants"
+                readonly
+              />
+            </mat-form-field>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-10 offset-md-1">
+            <mat-label class="label">Select the Access you want:</mat-label>
+          </div>
+        </div>
+
+        <div class="row">
+          <section class="example-section">
+            <ng-container *ngFor="let access of accessData">
+              <mat-checkbox
+                [value]="access.accessId"
+                class="col-md-5 offset-md-1"
+                (change)="addAccessId(access, $event.checked)"
+                [checked]="isCheckAccess(access)"
+                disabled
+              >
+                {{ access.name }}
+              </mat-checkbox></ng-container
+            >
+          </section>
+        </div>
+      </div>
+    </mat-tab>
+
+    <mat-tab label="Feature List">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-10 offset-md-1">
+            <mat-label class="label">Select the features you want:</mat-label>
+          </div>
+        </div>
+        <div class="row">
+          <section class="example-section">
+            <div *ngFor="let feature of featuresData" class="row">
+              <div class="col-md-4 offset-md-1">
+                <mat-checkbox
+                  [value]="feature.featureId"
+                  [checked]="isCheckFeature(feature)"
+                  (change)="
+                    showMetaList(feature, $event.checked);
+                    updateSelectedFeaturesMeta(
+                      feature.featureId,
+                      feature.metaList
+                    )
+                  "
+                  disabled
+                >
+                  {{ feature.name }}
+                </mat-checkbox>
+              </div>
+              <div class="col-md-6" *ngIf="isCheckFeature(feature)">
+                <div class="row">
+                  <mat-form-field
+                    *ngFor="let meta of feature.selectedMetaList"
+                    class="col-md-6"
+                  >
+                    <input
+                      matInput
+                      value="{{ meta.value }}"
+                      placeholder="{{ meta.key }}"
+                      #metaValue
+                      (change)="
+                        setMetaValue(
+                          feature.featureId,
+                          meta.key,
+                          metaValue.value
+                        )
+                      "
+                      readonly
+                    />
+                  </mat-form-field>
+                </div>
+              </div>
+            </div>
+          </section>
+        </div>
+      </div>
+    </mat-tab>
+
+    <!-- <mat-tab label="User Information">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-5 offset-md-1">
+              <mat-form-field>
+                <input
+                  matInput
+                  type="text"
+                  placeholder="First Name"
+                  formControlName="user_fname"
+                />
+              </mat-form-field>
+            </div>
+            <div class="col-md-5">
+              <mat-form-field>
+                <input
+                  matInput
+                  type="text"
+                  placeholder="Last Name"
+                  formControlName="user_lname"
+                />
+              </mat-form-field>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-5 offset-md-1">
+              <mat-form-field>
+                <input
+                  matInput
+                  type="tel"
+                  placeholder="Mobile Number"
+                  formControlName="mobile"
+                />
+              </mat-form-field>
+            </div>
+            <div class="col-md-5">
+              <mat-form-field>
+                <input
+                  matInput
+                  type="email"
+                  placeholder="Email"
+                  formControlName="email"
+                />
+              </mat-form-field>
+            </div>
+          </div>
+  
+          <div class="row">
+            <div class="col-md-5 offset-md-1">
+              <mat-form-field>
+                <input
+                  matInput
+                  type="text"
+                  placeholder="Login ID"
+                  formControlName="login_id"
+                />
+              </mat-form-field>
+            </div>
+          </div>
+  
+          <div class="row">
+            <div class="col-md-5 offset-md-1">
+              <mat-form-field>
+                <input
+                  matInput
+                  type="password"
+                  placeholder="Password"
+                  formControlName="password"
+                  [(ngModel)]="password"
+                />
+              </mat-form-field>
+            </div>
+            <div class="col-md-5">
+              <mat-form-field>
+                <input
+                  matInput
+                  type="password"
+                  placeholder="Confirm Password"
+                  formControlName="confirm_password"
+                  [(ngModel)]="confirm_password"
+                />
+                <mat-error
+                  *ngIf="userForm.hasError('mismatch', 'confirm_password')"
+                  >Passwords do not match</mat-error
+                >
+              </mat-form-field>
+            </div>
+          </div>
+  
+          <div class="row" *ngIf="nameError">
+            <div class="col-md-6 offset-md-3 text-center">
+              <p class="alert alert-danger">
+                <strong>All fields are mandatory</strong>
+              </p>
+            </div>
+          </div>
+        </div>
+      </mat-tab> -->
+  </mat-tab-group>
+
+  <div mat-dialog-actions align="end" class="actions">
+    <button
+      *ngIf="!isFirstTab()"
+      class="prev-btn"
+      mat-raised-button
+      (click)="previous()"
+    >
+      <mat-icon>navigate_before</mat-icon> Previous
+    </button>
+    <button
+      *ngIf="!isLastTab()"
+      class="btn-1"
+      mat-raised-button
+      (click)="next()"
+    >
+      Next<mat-icon>navigate_next</mat-icon>
+    </button>
+    <button
+      *ngIf="isLastTab()"
+      mat-raised-button
+      class="submit-btn"
+      mat-dialog-close
+    >
+      Close
+    </button>
+  </div>
+</div>
