changed login page and create account layout

--- a/mcarbonPortal/src/app/dashboard/dashboard.component.html
+++ b/mcarbonPortal/src/app/dashboard/dashboard.component.html
@@ -5,7 +5,8 @@
         <div class="card card-stats">
           <div class="card-header card-header-warning card-header-icon">
             <div class="card-icon">
-              <i class="material-icons">content_copy</i>
+              <!-- <i class="material-icons">content_copy</i> -->
+              <i class="fa fa-users"></i>
             </div>
             <p class="card-category">Accounts</p>
             <h3 class="card-title">
@@ -41,7 +42,7 @@
         <div class="card card-stats">
           <div class="card-header card-header-danger card-header-icon">
             <div class="card-icon">
-              <i class="material-icons">info_outline</i>
+              <i class="material-icons">videocam</i>
             </div>
             <p class="card-category">Sessions</p>
             <h3 class="card-title">75/100</h3>
