--- a/mcarbonPortal/src/app/login/login.component.html
+++ b/mcarbonPortal/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="back">
-  <div class="container">
+  <div class="container container-1">
     <mat-card class="card">
       <mat-card-header>
         <mat-card-title id="login-head">Login</mat-card-title>
@@ -30,7 +30,7 @@
               <mat-icon>{{ hide ? "visibility_off" : "visibility" }}</mat-icon>
             </button>
           </mat-form-field>
-          <button mat-raised-button class="login-button" (click)="login()">
+          <button mat-raised-button class="btn login-button" (click)="login()">
             Login
           </button>
           <div class="row">
