--- a/mcarbonPortal/src/app/login/login.component.html
+++ b/mcarbonPortal/src/app/login/login.component.html
@@ -20,6 +20,7 @@
               [type]="hide ? 'password' : 'text'"
               placeholder="Password"
               formControlName="password"
+              (keyUp.Enter) ="login()"
             />
             <button
               mat-icon-button
