--- a/openvidu-call/openvidu-call-front/projects/openvidu-angular/src/lib/components/layout/layout.component.css
+++ b/openvidu-call/openvidu-call-front/projects/openvidu-angular/src/lib/components/layout/layout.component.css
@@ -837,3 +837,35 @@
 	height: 100%;
 	margin-top: 40px;
 }
+@keyframes flowingAnimation {
+	0% {
+	  transform: translateX(50%);
+	}
+	100% {
+	  transform: translateX(-100%);
+	}
+  }
+  
+  .flow-container {
+	width: 100%;
+	height: 50px;
+	overflow: hidden;
+	position: relative;
+  }
+  
+  .flowing-description {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	align-items: center;
+  }
+  
+  .description-text {
+	font-size: 18px;
+	color: #fff;
+	margin-left: 20px;
+	animation: flowingAnimation 10s linear infinite;
+  }  
