--- a/mcarbonPortal/src/app/view-user-dialog/view-user-dialog.component.html
+++ b/mcarbonPortal/src/app/view-user-dialog/view-user-dialog.component.html
@@ -13,6 +13,7 @@
     [formGroup]="userForm"
     *ngIf="userForm"
     [dynamicHeight]="false"
+    mat-align-tabs="center"
   >
     <mat-tab label="Basic Information">
       <div class="container">
