--- a/mcarbonPortal/src/app/dashboard/dashboard.component.html
+++ b/mcarbonPortal/src/app/dashboard/dashboard.component.html
@@ -121,6 +121,12 @@
           </div>
           <div class="card-body">
             <h4 class="card-title">Daily Session Creation</h4>
+            <p class="card-category">
+              <span class="text-success"
+                ><i class="fa fa-long-arrow-up"></i> 20%
+              </span>
+              increase in today.
+            </p>
           </div>
           <div class="card-footer">
             <div class="stats">
