--- a/mcarbonPortal/src/app/delete-dialog/delete-dialog.component.html
+++ b/mcarbonPortal/src/app/delete-dialog/delete-dialog.component.html
@@ -1,1 +1,4 @@
-<p>delete-dialog works!</p>
+<h2>Confirmation Dialog</h2>
+<p>Are you sure you want to delete this item?</p>
+<button mat-raised-button color="primary" (click)="confirm()">Confirm</button>
+<button mat-raised-button color="warn" (click)="cancel()">Cancel</button>
