--- a/mcarbonPortal/src/app/update-user-dialog/update-user-dialog.component.html
+++ b/mcarbonPortal/src/app/update-user-dialog/update-user-dialog.component.html
@@ -11,6 +11,7 @@
     [formGroup]="userForm"
     *ngIf="userForm"
     [dynamicHeight]="false"
+    mat-align-tabs="center"
   >
     <mat-tab label="Basic Information">
       <div class="container">
