--- a/openvidu-call/openvidu-call-front/projects/openvidu-angular/src/lib/components/session/session.component.css
+++ b/openvidu-call/openvidu-call-front/projects/openvidu-angular/src/lib/components/session/session.component.css
@@ -4,6 +4,16 @@
 	height: 100%;
 }
 
+#toolbar {
+	background-color: transparent;
+	color: var(--ov-text-color);
+}
+
+#info-container>div {
+	display: flex;
+	align-items: center;
+}
+
 .sidenav-container {
 	position: relative;
 	height: calc(100% - 70px);
@@ -92,6 +102,7 @@
 ::ng-deep .mat-input-element {
 	caret-color: #000000;
 }
+
 ::ng-deep .mat-primary .mat-option.mat-selected:not(.mat-option-disabled) {
 	color: #000000;
 }
@@ -107,3 +118,36 @@
 ::ng-deep .mat-drawer {
 	background-color: transparent !important;
 }
+
+.ticker {
+	width: 100%;
+	height: 50px;
+	background-color: #333;
+	color: #FFF;
+	overflow: hidden;
+  }
+  
+  .news {
+	padding: 10px;
+	margin-left: 10%;
+	margin-right: 10%;
+  }
+  
+  .news-content {
+	display: inline-block;
+	white-space: nowrap;
+	animation: marquee 15s linear infinite;
+	animation-delay: 2s; /* Delay the start of animation by 2 seconds */
+  }
+  
+  .news-content p {
+	display: inline-block;
+	margin: 0;
+	font-family: Arial, sans-serif;
+	font-size: 18px;
+	animation: slide-right 7.5s linear infinite; /* Half of the total duration */
+	animation-direction: alternate;
+	animation-fill-mode: both;
+  }
+
+  
