delete working now

--- a/mcarbonPortal/src/app/account-management/account-management.component.html
+++ b/mcarbonPortal/src/app/account-management/account-management.component.html
@@ -183,7 +183,7 @@
                       <button
                         class="btn-action"
                         mat-menu-item
-                        (click)="deleteAccount(account)"
+                        (click)="deleteAccount(account.accountId)"
                         *ngIf="showDelete"
                       >
                         <mat-icon style="color: #009688"
