--- a/mcarbonPortal/src/app/create-account/create-account.component.html
+++ b/mcarbonPortal/src/app/create-account/create-account.component.html
@@ -194,7 +194,7 @@
                   >
                     <input
                       matInput
-                      
+                      type="{{meta.type}}"
                       placeholder="{{ meta.key }}"
                       #metaValue
                       (change)="
