--- a/mcarbonPortal/src/app/user-management/user-management.component.html
+++ b/mcarbonPortal/src/app/user-management/user-management.component.html
@@ -195,7 +195,7 @@
                       <button
                         class="btn-action"
                         mat-menu-item
-                        (click)="deleteUser(user.userCode)"
+                        (click)="deleteUser(user.userId)"
                         *ngIf="showDelete"
                       >
                         <mat-icon style="color: #009688"
