--- a/mcarbonPortal/src/app/components/navbar/navbar.component.html
+++ b/mcarbonPortal/src/app/components/navbar/navbar.component.html
@@ -74,7 +74,7 @@
             </p> </a
           >
           <mat-menu #menu="matMenu" xPosition="before">
-            <button class="btn-action" mat-menu-item (click)="goTo('app/user-profile')">
+            <button class="btn-action" mat-menu-item (click)="goTo('app/user_profile')">
               <span>Profile</span>
             </button>
             <button class="btn-action" mat-menu-item (click)="logout()">
