--- a/mcarbonPortal/src/app/delete-dialog/delete-dialog.component.html
+++ b/mcarbonPortal/src/app/delete-dialog/delete-dialog.component.html
@@ -1,4 +1,15 @@
-<h2>Confirmation Dialog</h2>
-<p>Are you sure you want to delete this item?</p>
-<button mat-raised-button color="primary" (click)="confirm()">Confirm</button>
-<button mat-raised-button color="warn" (click)="cancel()">Cancel</button>
+<div class="row justify-content-center btn-grp">
+  <h6>Are you sure you want to delete this record?</h6>
+</div>
+<div class="row justify-content-center">
+  <div class="col-md-5 offset-md-1">
+    <button mat-raised-button class="btn-confirm" [mat-dialog-close]="true">
+      Confirm
+    </button>
+  </div>
+  <div class="col-md-5 offset-md-1">
+    <button mat-raised-button class="btn-cancel" [mat-dialog-close]="false">
+      Cancel
+    </button>
+  </div>
+</div>
