--- a/openvidu-call/openvidu-call-front/src/app/components/call/call.component.html
+++ b/openvidu-call/openvidu-call-front/src/app/components/call/call.component.html
@@ -24,11 +24,11 @@
 	[toolbarLeaveButton]="true"
 	[toolbarParticipantsPanelButton]="true"
 	[toolbarChatPanelButton]="chatEnabled"
-	[toolbarActivitiesPanelButton]="true"
-	[toolbarDisplaySessionName]="false"
-	[toolbarDisplayLogo]="true"
+	[toolbarActivitiesPanelButton]="activitiesButton"
+	[toolbarDisplaySessionName]="true"
+	[toolbarDisplayLogo]="showLogo"
 	[activitiesPanelRecordingActivity]="true"
-	[participantPanelItemMuteButton]="true"
+	[participantPanelItemMuteButton]="participantsButton"
 	[streamDisplayParticipantName]="true"
 	[streamDisplayAudioDetection]="true"
 	[streamSettingsButton]="true"
@@ -38,6 +38,18 @@
 	[videoMuted]="true"
 	[audioMuted]="true"
 	[broadcastingActivityBroadcastingError]="error"
+	[toolbarPublishVideoButton]="false"
+	[toolbarVideoControlButton]="false"
+	[toolbarRecordingButton]="true"
+	[toolbarDisplayLogo]="true"
+	[toolbarDisplaySessionName]="true"
+	[streamDisplayParticipantName]="true"
+	[displayTickerName]="description"
+	[displayTicker]="displayTicker"
+	[sessionName]="sessionName"
+	[sessionDuration]="sessionDuration"
+	[toolbarDisplayTimer]="displayTimer"
+	
 >
 </ov-videoconference>
 
