--- a/mcarbonPortal/src/app/form-dialog/form-dialog.component.html
+++ b/mcarbonPortal/src/app/form-dialog/form-dialog.component.html
@@ -181,7 +181,7 @@
           </div>
         </div>
 
-        <div class="row">
+        <!-- <div class="row">
           <section class="example-section">
             <div *ngFor="let feature of featuresData" class="row">
               <div class="col-md-4 offset-md-1">
@@ -212,6 +212,91 @@
                       (change)="setMetaValue(feature.featureId,meta.key,metaValue.value)"
                     />
                   </mat-form-field>
+                </div>
+              </div>
+            </div>
+          </section>
+        </div> -->
+        <div class="row">
+          <section class="example-section">
+            <div *ngFor="let feature of featuresData" class="row">
+              <div class="col-md-4 offset-md-1">
+                <mat-checkbox
+                  [value]="feature.featureId"
+                  (change)="toggleFeatureSelection(feature.featureId)"
+                >
+                  {{ feature.name }}
+                </mat-checkbox>
+              </div>
+              <!-- <div class="col-md-6" *ngIf="feature.showMeta">
+                <div class="row">
+                  <mat-form-field
+                    *ngFor="let meta of feature.selectedMetaList"
+                    class="col-md-6"
+                  >
+                    <input
+                      matInput
+                      type="{{meta.type}}"
+                      placeholder="{{ meta.value.name }}"
+                      #metaValue
+                      (change)="
+                        setMetaValue(
+                          feature.featureId,
+                          meta.value.key,
+                          metaValue.value
+                        )
+                      "
+                    />
+                  </mat-form-field>
+                </div>
+              </div> -->
+
+              <div
+                class="col-md-5"
+                *ngIf="selectedFeatures.includes(feature.featureId)"
+              >
+                <div *ngFor="let meta of feature.metaList">
+                  <ng-container [ngSwitch]="meta.type">
+                    <mat-slide-toggle
+                      *ngSwitchCase="'bool'"
+                      (change)="
+                        setMetaValue(
+                          feature.featureId,
+                          meta.key,
+                          $event.checked
+                        )
+                      "
+                    >
+                      {{ meta.name }}
+                    </mat-slide-toggle>
+
+                    <div *ngSwitchCase="'file'">
+                      <label for="{{ meta.key }}">{{ meta.name }}</label>
+                      <input
+                        type="file"
+                        id="{{ meta.key }}"
+                        name="{{ meta.key }}"
+                        (change)="
+                          onFileInputChange($event, meta, feature.featureId)
+                        "
+                      />
+                    </div>
+
+                    <mat-form-field *ngSwitchCase="'text'">
+                      <input
+                        matInput
+                        #metaValue
+                        type="text"
+                        placeholder="{{ meta.name }}"
+                        (change)="
+                          setMetaValue(
+                            feature.featureId,
+                            meta.key,
+                            metaValue.value
+                          )
+                        "
+                    /></mat-form-field>
+                  </ng-container>
                 </div>
               </div>
             </div>
