--- a/openvidu-call/openvidu-call-front/src/app/components/call/call.component.html
+++ b/openvidu-call/openvidu-call-front/src/app/components/call/call.component.html
@@ -49,7 +49,7 @@
 	[sessionName]="sessionName"
 	[sessionDuration]="sessionDuration"
 	[toolbarDisplayTimer]="displayTimer"
-	
+	[toolbarDisplayLogoValue]="logo"
 >
 </ov-videoconference>
 
